Pull Development into Master (#6)
* Add embeds footer text to custom translations. (#3)

* Update development (#5)

* Fix typo.

* Fix typo.

* Update build.gradle

* Update gradle.properties

* Update Bot.java

* Delete src/main/java/com/awakenedredstone/autowhitelist/bot directory

* Fix crash when whitelistScheduledVerificationSeconds is below 30

* Remove CPU status query

* Fix help command.
Set a minimum allowed value to whitelistScheduledVerificationSeconds.

* Fix issue where /auto-whitelist wasn't available after doing /reload

* Fix typo

* Create README.md

* Beta 3

* Beta 3

* Create LICENSE

* Create LICENSE

* Update README.md

* Update README.md

* Beta 4

* Beta 5 - >=22w03a

* Update README.md

* Beta 5.0.1 - >=22w03a - Patch

* Create FUNDING.yml

* Update README.md

* Update LICENSE

* Update development (#5)

* Fix typo.

* Fix typo.

* Update build.gradle

* Update gradle.properties

* Update Bot.java

* Delete src/main/java/com/awakenedredstone/autowhitelist/bot directory

* Fix crash when whitelistScheduledVerificationSeconds is below 30

* Remove CPU status query

* Fix help command.
Set a minimum allowed value to whitelistScheduledVerificationSeconds.

* Fix issue where /auto-whitelist wasn't available after doing /reload

* Fix typo

* Create README.md

* Beta 3

* Beta 3

* Create LICENSE

* Create LICENSE

* Update README.md

* Update README.md

* Beta 4

* Beta 5 - >=22w03a

* Update README.md

* Beta 5.0.1 - >=22w03a - Patch

* Create FUNDING.yml

* Update README.md

* Update LICENSE

* Code bump

* Release 1.0.0

Co-authored-by: RTTV <72476111+RealRTTV@users.noreply.github.com>